Tidy up code layout and remove commented-out code.

--- a/appdir/templates/add_recipe.html
+++ b/appdir/templates/add_recipe.html
@@ -30,7 +30,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fa-solid fa-list-ul prefix red-text text-darken-2"></i>
-                    <textarea id="ingredients" name="ingredients" class="materialize-textarea validate" placeholder="Enter recipe ingredients and quantities here." required></textarea>
+                    <textarea id="ingredients" name="ingredients" class="materialize-textarea validate" placeholder="Recipe Ingredients and Quantities" required></textarea>
                     <label for="ingredients">Ingredients</label>
                 </div>
             </div>
@@ -38,7 +38,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fa-solid fa-list-ol prefix red-text text-darken-2"></i>
-                    <textarea id="instructions" name="instructions" class="materialize-textarea validate" placeholder="Enter recipe instructions in numerical order here." required></textarea>                    
+                    <textarea id="instructions" name="instructions" class="materialize-textarea validate" placeholder="Recipe Instructions" required></textarea>                    
                     <label for="instructions">Recipe Instructions</label>
                 </div>
             </div>
