--- a/appdir/templates/categories.html
+++ b/appdir/templates/categories.html
@@ -9,7 +9,7 @@
                 <div class="col s12 m4 l3">
                     <div class="card red accent-5 text-shadow center-align">
                         <div class="card-content white-text">
-                            <span class="card-title">{{ category.category_name }}</span>
+                            <a href="{{ url_for('view_category', category_id=category.id) }}" class="card-title text-link">{{ category.category_name }}</a>
                             <p>
                                 {% set listLength = namespace(n = 0) %}
                                 {% for recipe in recipes %}
