--- a/appdir/static/css/style.css
+++ b/appdir/static/css/style.css
@@ -68,12 +68,18 @@ nav {
     color: darkgray;
 }
 
-.recipe-link {
+.text-link {
     color: inherit;
     text-decoration: underline;
     background: inherit;
     box-shadow: none;
     height: auto;
+    width: fit-content;
+    margin: auto;
+}
+
+.text-link:hover {
+    background-color: var(--theme-color);
 }
 
 .underline {
@@ -86,10 +92,6 @@ nav {
     border-top: none;
     border-left: none;
     border-right: none;
-}
-
-.recipe-link:hover {
-    background-color: var(--theme-color);
 }
 
 .modal-exit {
