--- a/appdir/templates/base.html
+++ b/appdir/templates/base.html
@@ -15,12 +15,10 @@
     <ul id="dropdown1" class="dropdown-content">
         <li><a href="{{ url_for('get_categories') }}">Categories</a></li>
         <li class="divider"></li>
-        <li><a href="#!">Browse All</a></li>
+        <li><a href="{{ url_for('get_recipes') }}">Browse All</a></li>
     </ul>
     <ul id="dropdown2" class="dropdown-content">
-        <li><a href="#!">My Recipes</a></li>
-        <li class="divider"></li>
-        <li><a href="#!">Favourites</a></li>
+        <li><a href="{{ url_for('my_recipes') }}">My Recipes</a></li>
         <li class="divider"></li>
         <li><a href="{{ url_for('logout') }}">Log Out</a></li>
     </ul>
@@ -52,7 +50,7 @@
     <ul class="sidenav" id="mobile-demo">
         <li><a href="{{ url_for('home') }}">Home</a></li>
         <li><a href="{{ url_for('get_categories') }}">Browse by Category</a></li>
-        <li><a href="#">Browse All Recipes</a></li>
+        <li><a href="{{ url_for('get_recipes') }}">Browse All Recipes</a></li>
         <li><a href="{{ url_for('add_recipe') }}">Add Recipe</a></li>
         {% if session.user %}
             <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
