--- a/appdir/templates/edit_user.html
+++ b/appdir/templates/edit_user.html
@@ -10,7 +10,10 @@
                 <div class="input-field col s12">
                     <i class="fa-solid fa-user prefix red-text text-darken-2"></i>
                     <input id="user_name" name="user_name" minlength="3" maxlength="20" type="text" class="validate"
-                        value="{{ user.user_name }}" required {% if user.user_name == "admin" %} disabled {% endif %}>
+                        value="{{ user.user_name }}" required 
+                        {% if user.user_name == "admin" %} 
+                            disabled 
+                        {% endif %}>
                     <label for="user_name">Username</label>
                 </div>
             </div>
@@ -20,9 +23,17 @@
                     <i class="fa-solid fa-user-gear prefix red-text text-darken-2"></i>
                     <select name="is_superuser" id="is_superuser" 
                         {% if user.user_name == "admin" %} disabled {% endif %}>
-                            <option value=True {% if user.is_superuser %} selected {% endif %}>Yes
+                            <option value=True
+                                {% if user.is_superuser %}
+                                    selected
+                                {% endif %}
+                                >Yes
                             </option>
-                            <option value=False {% if not user.is_superuser %} selected {% endif %}>No
+                            <option value=False 
+                                {% if not user.is_superuser %}
+                                    selected
+                                {% endif %}
+                                >No
                             </option>
                     </select>
                     <label for="is_superuser">Is this user a Superuser?</label>
