--- a/appdir/templates/my_recipes.html
+++ b/appdir/templates/my_recipes.html
@@ -17,7 +17,8 @@
                 <div class="col s12 m4 l3">
                     <div class="card red accent-5 text-shadow center-align">
                         <div class="card-content white-text">
-                            <a data-target="modal_view_{{ recipe.recipe_name.lower() }}" class="btn card-title recipe-link modal-trigger">{{ recipe.recipe_name }}</a>
+                            <!-- Recipe Modal Trigger -->
+                            <a data-target="recipe-modal-{{ recipe.id }}" class="btn card-title text-link modal-trigger">{{ recipe.recipe_name }}</a>
                             <p>
                                 Category: 
                                 {% for category in categories %}
@@ -29,11 +30,11 @@
                         </div>
                         <div class="card-action">
                             <a href="{{ url_for('edit_recipe', recipe_id=recipe.id) }}" class="btn green darken-4">Edit</a>
-                            <!-- Modal Trigger -->
-                            <a data-target="modal_delete_{{ recipe.recipe_name.lower() }}" class="btn red darken-4 modal-trigger">Delete</a>
+                            <!-- Delete Modal Trigger -->
+                            <a data-target="modal-delete-{{ recipe.id }}" class="btn red darken-4 modal-trigger">Delete</a>
                         </div>
-                        <!-- Modal Structure -->
-                        <div id="modal_delete_{{ recipe.recipe_name.lower() }}" class="modal">
+                        <!-- Delete Modal Structure -->
+                        <div id="modal-delete-{{ recipe.id }}" class="modal">
                             <div class="modal-content red accent-4 white-text">
                                 <h3>Warning!</h3>
                                 <p>Deleting a recipe is permanent and the associated data will be irrecoverable.</p>
@@ -45,6 +46,35 @@
                                 </div>
                                 <div class="col s6 center">
                                     <a class="modal-action modal-close btn green darken-4 white-text">CANCEL</a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Recipe Modal Structure -->
+                        <div id="recipe-modal-{{ recipe.id }}" class="modal recipe-modal">
+                            <div class="modal-content red accent-4 white-text">
+                                <h3 class="modal-recipe-title">{{ recipe.recipe_name }}</h3>
+                                <div class="row">
+                                    <div class="col s12 m6 ingredients-content">
+                                        <h4>Ingredients</h4>
+                                        {% for mongo_recipe in mongo_recipes %}
+                                            {% if mongo_recipe.id == recipe.id %}
+                                                {{ mongo_recipe.ingredients }}
+                                            {% endif %}
+                                        {% endfor %}
+                                    </div>
+                                    <div class="col s12 m6">
+                                        <h4>Instructions</h4>
+                                        {% for mongo_recipe in mongo_recipes %}
+                                            {% if mongo_recipe.id == recipe.id %}
+                                                {{ mongo_recipe.instructions }}
+                                            {% endif %}
+                                        {% endfor %}
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <div class="col s12 center">
+                                    <button class="modal-action modal-close btn green darken-4 white-text">Close</button>
                                 </div>
                             </div>
                         </div>
