--- a/appdir/templates/recipes.html
+++ b/appdir/templates/recipes.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-    <h2 class="page-title theme-color center">{{ category.category_name }} Recipes</h2>
+    <h2 class="page-title theme-color center">All Recipes</h2>
 
     <div class="row center-align">
         {% if recipes|length > 0 %}
@@ -11,6 +11,7 @@
                         <div class="card-content white-text">
                             <!-- Modal Trigger -->
                             <a href="#recipe-modal-{{ recipe.id }}" class="card-title modal-trigger text-link">{{ recipe.recipe_name }}</a>
+                            <span>Category: {{ recipe.category }}</span>
                         </div>
                         <div class="card-action">
                             <!-- Additional Modal Trigger -->
@@ -23,10 +24,9 @@
                     <div class="modal-content red accent-4 white-text">
                         <i class="fa-solid fa-circle-xmark modal-exit modal-close"></i>
                         <h3 class="modal-recipe-title">{{ recipe.recipe_name }}</h3>
-                        <h4>Category: {{ recipe.category }}</h4>
                         <div class="row">
                             <div class="col s12 m6 ingredients-content">
-                                <h5>Ingredients</h5>
+                                <h4>Ingredients</h4>
                                 {% for mongo_recipe in mongo_recipes %}
                                     {% if mongo_recipe.id == recipe.id %}
                                         {{ mongo_recipe.ingredients }}
@@ -34,7 +34,7 @@
                                 {% endfor %}
                             </div>
                             <div class="col s12 m6">
-                                <h5>Instructions</h5>
+                                <h4>Instructions</h4>
                                 {% for mongo_recipe in mongo_recipes %}
                                     {% if mongo_recipe.id == recipe.id %}
                                         {{ mongo_recipe.instructions }}
