--- a/appdir/templates/add_recipe.html
+++ b/appdir/templates/add_recipe.html
@@ -30,7 +30,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fa-solid fa-list-ul prefix red-text text-darken-2"></i>
-                    <textarea id="ingredients" name="ingredients" class="materialize-textarea validate" placeholder="Recipe Ingredients and Quantities" required></textarea>
+                    <textarea id="ingredients" name="ingredients" class="materialize-textarea validate" placeholder="Enter each ingredient & quantity on a new line." required></textarea>
                     <label for="ingredients">Ingredients</label>
                 </div>
             </div>
@@ -38,8 +38,16 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="fa-solid fa-list-ol prefix red-text text-darken-2"></i>
-                    <textarea id="instructions" name="instructions" class="materialize-textarea validate" placeholder="Recipe Instructions" required></textarea>                    
+                    <textarea id="instructions" name="instructions" class="materialize-textarea validate" placeholder="Enter each instruction in order and on a new line." required></textarea>                    
                     <label for="instructions">Recipe Instructions</label>
+                </div>
+            </div>
+            <!-- image url -->
+            <div class="row">
+                <div class="input-field col s12">
+                    <i class="fa-solid fa-image prefix red-text text-darken-2"></i>
+                    <input id="img_url" name="img_url" type="text" class="validate" pattern="https?://.+">
+                    <label for="img_url">Image URL</label>
                 </div>
             </div>
             <!-- submit button -->
