--- a/appdir/templates/home.html
+++ b/appdir/templates/home.html
@@ -20,7 +20,7 @@
                     alt="A prawn pasta dish">
             </div>
             <div class="col s12 m4 pull-m8 theme-color center main-text">
-                Recipes can be viewed by everyone and can be saved by registered users to refer to later.
+                Recipes can be viewed by everyone but only their owners can edit or delete existing recipes.
             </div>
         </div>
     </div>
