--- a/appdir/templates/categories.html
+++ b/appdir/templates/categories.html
@@ -8,6 +8,8 @@
             {% for category in categories %}
                 <div class="col s12 m4 l3">
                     <div class="card red accent-5 text-shadow center-align">
+                        <div class="card-image" style="background-image: url(../static/images/{{ category.category_img }});">
+                        </div>
                         <div class="card-content white-text">
                             <a href="{{ url_for('view_category', category_id=category.id) }}" class="card-title text-link">{{ category.category_name }}</a>
                             <p>
