--- a/appdir/templates/manage_recipes.html
+++ b/appdir/templates/manage_recipes.html
@@ -3,11 +3,29 @@
 
     <h2 class="page-title theme-color center">Manage Recipes</h2>
 
+    <ul class="pagination center main-text">
+        {% for letter in a_z %}
+            <li class=
+            "{% if letter_filter == letter %}
+                active
+            {% endif %}">
+            <a href="{{ url_for('get_recipes_filter', filter=letter) }}"><strong>{{ letter }}</strong></a></li>
+        {% endfor %}
+    </ul>
+
     <div class="row center-align">
         {% if recipes|length > 0 %}
             {% for recipe in recipes %}
                 <div class="col s12 m4 l3">
                     <div class="card red accent-5 text-shadow center-align">
+                        <div class="card-image" style="background-image: url(
+                            {% if recipe.img_url != '' %}
+                                {{ recipe.img_url }}
+                            {% else %}
+                                ../static/images/img-empty.png
+                            {% endif %}
+                            );">
+                        </div>
                         <div class="card-content white-text">
                             <a data-target="modal-view-{{ recipe.recipe_name.lower() }}" class="btn card-title text-link modal-trigger">{{ recipe.recipe_name }}</a>
                             <p>
@@ -56,23 +74,23 @@
                                 <div class="row">
                                     <div class="col s12 m6 ingredients-content">
                                         <h5>Ingredients</h5>
-                                        <p>
-                                            {% for mongo_recipe in mongo_recipes %}
-                                                {% if mongo_recipe.id == recipe.id %}
-                                                    {{ mongo_recipe.ingredients }}
-                                                {% endif %}
-                                            {% endfor %}
-                                        </p>
+                                        {% for mongo_recipe in mongo_recipes %}
+                                            {% if mongo_recipe.id == recipe.id %}
+                                                {%- for ingredient in mongo_recipe.ingredients -%}
+                                                    <ul>{{- ingredient }}</ul>
+                                                {%- endfor -%}
+                                            {% endif %}
+                                        {% endfor %}
                                     </div>
                                     <div class="col s12 m6">
                                         <h5>Instructions</h5>
-                                        <p>
-                                            {% for mongo_recipe in mongo_recipes %}
-                                                {% if mongo_recipe.id == recipe.id %}
-                                                    {{ mongo_recipe.instructions }}
-                                                {% endif %}
-                                            {% endfor %}
-                                        </p>
+                                        {% for mongo_recipe in mongo_recipes %}
+                                            {% if mongo_recipe.id == recipe.id %}
+                                                {%- for instruction in mongo_recipe.instructions -%}
+                                                    <ul>{{- instruction }}</ul>
+                                                {%- endfor -%}
+                                            {% endif %}
+                                        {% endfor %}
                                     </div>
                                 </div>
                             </div>
