--- a/appdir/templates/my_recipes.html
+++ b/appdir/templates/my_recipes.html
@@ -16,6 +16,14 @@
             {% for recipe in user_recipes %}
                 <div class="col s12 m4 l3">
                     <div class="card red accent-5 text-shadow center-align">
+                        <div class="card-image" style="background-image: url(
+                            {% if recipe.img_url != '' %}
+                                {{ recipe.img_url }}
+                            {% else %}
+                                ../static/images/img-empty.png
+                            {% endif %}
+                            );">
+                        </div>
                         <div class="card-content white-text">
                             <!-- Recipe Modal Trigger -->
                             <a data-target="recipe-modal-{{ recipe.id }}" class="btn card-title text-link modal-trigger">{{ recipe.recipe_name }}</a>
@@ -58,7 +66,9 @@
                                         <h4>Ingredients</h4>
                                         {% for mongo_recipe in mongo_recipes %}
                                             {% if mongo_recipe.id == recipe.id %}
-                                                {{ mongo_recipe.ingredients }}
+                                                {%- for ingredient in mongo_recipe.ingredients -%}
+                                                    <ul>{{- ingredient }}</ul>
+                                                {%- endfor -%}
                                             {% endif %}
                                         {% endfor %}
                                     </div>
@@ -66,7 +76,9 @@
                                         <h4>Instructions</h4>
                                         {% for mongo_recipe in mongo_recipes %}
                                             {% if mongo_recipe.id == recipe.id %}
-                                                {{ mongo_recipe.instructions }}
+                                                {%- for instruction in mongo_recipe.instructions -%}
+                                                    <ul>{{- instruction }}</ul>
+                                                {%- endfor -%}
                                             {% endif %}
                                         {% endfor %}
                                     </div>
