--- a/appdir/templates/profile.html
+++ b/appdir/templates/profile.html
@@ -58,7 +58,7 @@
                 <div class="card red darken-1">
                     <div class="card-content white-text">
                         <span class="card-title center">Manage Categories</span>
-                        <p class="center">Manager the website's recipe categories.</p>
+                        <p class="center">Manage the website's recipe categories.</p>
                     </div>
                     <div class="card-action center">
                         <a href="{{ url_for('manage_categories') }}">Go to All Categories</a>
@@ -69,7 +69,7 @@
                 <div class="card red darken-1">
                     <div class="card-content white-text">
                         <span class="card-title center">Manage Users</span>
-                        <p class="center">Manager the website's registered users.</p>
+                        <p class="center">Manage the website's registered users.</p>
                     </div>
                     <div class="card-action center">
                         <a href="{{ url_for('get_users') }}">Manage Users</a>
