--- a/appdir/static/css/style.css
+++ b/appdir/static/css/style.css
@@ -19,6 +19,14 @@ nav {
     position: fixed;
     z-index: 100;
 }
+
+li {
+    padding-top: 0.5rem;
+}
+
+ol {
+    text-align: left;
+}
   
 .brand-logo,
 .page-title {
@@ -76,6 +84,7 @@ nav {
     height: auto;
     width: fit-content;
     margin: auto;
+    cursor: pointer;
 }
 
 .text-link:hover {
@@ -134,6 +143,7 @@ nav {
     .card .card-content,
     .card .card-action {
         padding: 0.5rem;
+        overflow-wrap: anywhere;
     }
 
     .card .card-image {
@@ -182,6 +192,22 @@ nav {
 
         textarea.materialize-textarea {
             height: 63px;
+        }
+    
+    }
+
+    @media screen and (min-width: 601px) and (max-width: 1200px) {
+
+        .card-content {
+            height: 190px;
+        }
+    
+    }
+
+    @media screen and (min-width: 1201px) {
+
+        .card-content {
+            height: 160px;
         }
     
     }
