--- a/appdir/templates/category.html
+++ b/appdir/templates/category.html
@@ -19,6 +19,13 @@
                         <div class="card-content white-text">
                             <!-- Modal Trigger -->
                             <a href="#recipe-modal-{{ recipe.id }}" class="card-title modal-trigger text-link">{{ recipe.recipe_name }}</a>
+                            <p>Owner: 
+                                {% for mongo_recipe in mongo_recipes %}
+                                    {% if mongo_recipe.id == recipe.id %}
+                                        {{ mongo_recipe.created_by }}
+                                    {% endif %}
+                                {% endfor %}
+                            </p>
                         </div>
                         <div class="card-action">
                             <!-- Additional Modal Trigger -->
@@ -35,25 +42,36 @@
                         <div class="row">
                             <div class="col s12 m6 ingredients-content">
                                 <h5>Ingredients</h5>
-                                {% for mongo_recipe in mongo_recipes %}
-                                    {% if mongo_recipe.id == recipe.id %}
-                                        {%- for ingredient in mongo_recipe.ingredients -%}
-                                            <ul>{{- ingredient }}</ul>
-                                        {%- endfor -%}
-                                    {% endif %}
-                                {% endfor %}
+                                <ul>
+                                    {% for mongo_recipe in mongo_recipes %}
+                                        {% if mongo_recipe.id == recipe.id %}
+                                            {%- for ingredient in mongo_recipe.ingredients -%}
+                                                <li>{{- ingredient }}</li>
+                                            {%- endfor -%}
+                                        {% endif %}
+                                    {% endfor %}
+                                </ul>
                             </div>
                             <div class="col s12 m6">
                                 <h5>Instructions</h5>
-                                {% for mongo_recipe in mongo_recipes %}
-                                    {% if mongo_recipe.id == recipe.id %}
-                                        {%- for instruction in mongo_recipe.instructions -%}
-                                            <ul>{{- instruction }}</ul>
-                                        {%- endfor -%}
-                                    {% endif %}
-                                {% endfor %}
+                                <ol>
+                                    {% for mongo_recipe in mongo_recipes %}
+                                        {% if mongo_recipe.id == recipe.id %}
+                                            {%- for instruction in mongo_recipe.instructions -%}
+                                                <li>{{- instruction }}</li>
+                                            {%- endfor -%}
+                                        {% endif %}
+                                    {% endfor %}
+                                </ol>
                             </div>
                         </div>
+                        <h4>Owner: 
+                            {% for mongo_recipe in mongo_recipes %}
+                                {% if mongo_recipe.id == recipe.id %}
+                                    {{ mongo_recipe.created_by }}
+                                {% endif %}
+                            {% endfor %}
+                        </h4>
                     </div>
                     <div class="modal-footer">
                         <div class="col s12 center">
