--- a/appdir/templates/recipes.html
+++ b/appdir/templates/recipes.html
@@ -29,7 +29,14 @@
                         <div class="card-content white-text">
                             <!-- Modal Trigger -->
                             <a href="#recipe-modal-{{ recipe.id }}" class="card-title modal-trigger text-link">{{ recipe.recipe_name }}</a>
-                            <span>Category: {{ recipe.category }}</span>
+                            <p>Category: {{ recipe.category }}</p>
+                            <p>Owner: 
+                                {% for mongo_recipe in mongo_recipes %}
+                                    {% if mongo_recipe.id == recipe.id %}
+                                        {{ mongo_recipe.created_by }}
+                                    {% endif %}
+                                {% endfor %}
+                            </p>
                         </div>
                         <div class="card-action">
                             <!-- Additional Modal Trigger -->
@@ -41,29 +48,40 @@
                 <div id="recipe-modal-{{ recipe.id }}" class="modal recipe-modal">
                     <div class="modal-content red accent-4 white-text">
                         <i class="fa-solid fa-circle-xmark modal-exit modal-close"></i>
-                        <h3 class="modal-recipe-title">{{ recipe.recipe_name }}</h3>
+                        <h4 class="modal-recipe-title">{{ recipe.recipe_name }}</h4>
                         <div class="row">
                             <div class="col s12 m6 ingredients-content">
-                                <h4>Ingredients</h4>
-                                {% for mongo_recipe in mongo_recipes %}
-                                    {% if mongo_recipe.id == recipe.id %}
-                                        {%- for ingredient in mongo_recipe.ingredients -%}
-                                            <ul>{{- ingredient }}</ul>
-                                        {%- endfor -%}
-                                    {% endif %}
-                                {% endfor %}
+                                <h5>Ingredients</h5>
+                                <ul>
+                                    {% for mongo_recipe in mongo_recipes %}
+                                        {% if mongo_recipe.id == recipe.id %}
+                                            {%- for ingredient in mongo_recipe.ingredients -%}
+                                                <li>{{- ingredient }}</li>
+                                            {%- endfor -%}
+                                        {% endif %}
+                                    {% endfor %}
+                                </ul>
                             </div>
                             <div class="col s12 m6">
-                                <h4>Instructions</h4>
-                                {% for mongo_recipe in mongo_recipes %}
-                                    {% if mongo_recipe.id == recipe.id %}
-                                        {%- for instruction in mongo_recipe.instructions -%}
-                                            <ul>{{- instruction }}</ul>
-                                        {%- endfor -%}
-                                    {% endif %}
-                                {% endfor %}
+                                <h5>Instructions</h5>
+                                <ol>
+                                    {% for mongo_recipe in mongo_recipes %}
+                                        {% if mongo_recipe.id == recipe.id %}
+                                            {%- for instruction in mongo_recipe.instructions -%}
+                                                <li>{{- instruction }}</li>
+                                            {%- endfor -%}
+                                        {% endif %}
+                                    {% endfor %}
+                                </ol>
                             </div>
                         </div>
+                        <h4>Owner: 
+                            {% for mongo_recipe in mongo_recipes %}
+                                {% if mongo_recipe.id == recipe.id %}
+                                    {{ mongo_recipe.created_by }}
+                                {% endif %}
+                            {% endfor %}
+                        </h4>
                     </div>
                     <div class="modal-footer">
                         <div class="col s12 center">
