Fix retrieval of data from recipe forms to disable blank lines being added to the Mongo db arrays.

--- a/appdir/templates/categories.html
+++ b/appdir/templates/categories.html
@@ -10,7 +10,7 @@
                     <div class="card red accent-5 text-shadow center-align">
                         <div class="card-image" style="background-image: url(../static/images/{{ category.category_img }});">
                         </div>
-                        <div class="card-content white-text">
+                        <div class="card-content white-text category-card">
                             <a href="{{ url_for('view_category', category_id=category.id) }}" class="card-title text-link">{{ category.category_name }}</a>
                             <p>
                                 {% set listLength = namespace(n = 0) %}
