--- a/appdir/static/css/style.css
+++ b/appdir/static/css/style.css
@@ -162,6 +162,10 @@ nav {
         margin-bottom: 0;
     }
 
+    .category-card {
+        height: auto!important;
+    }
+
 /* Code beginning here taken and adapted from https://www.w3schools.com/howto/howto_js_scroll_to_top.asp */
 
     #scroll-btn {
